<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">计算器</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="number0">0</string>

    <string name="sign_percent">%</string>

    <string name="label_loan_val">贷款金额</string>
    <string name="label_loan_time">贷款时长</string>
    <string name="label_currency">元</string>
    <string name="label_year">年</string>
    <string name="label_month">月</string>
    <string name="label_annual_rate">年利率</string>
    <string name="btn_clear">清除</string>
    <string name="btn_calculate">计算</string>
    <string name="label_repay_method">还款方式</string>
    <string name="label_1st_mon_payment">首月应还</string>
    <string name="label_total_interest">总利息</string>
    <string name="label_emi">等额本息</string>
    <string name="label_epi">等额本金</string>
    <string name="label_interest_first">先息后本</string>
    <string name="label_plan_overview">方案一览</string>
    <string name="label_plan_details">详细还款计划</string>
    <string name="label_month_idx">次数</string>
    <string name="label_payment">当月应还</string>
    <string name="label_remaining">剩余本金</string>

    <string-array name="plan_spinner_items">
        <item>等额本息</item>
        <item>等额本金</item>
        <item>先息后本</item>
    </string-array>

    <string name="tmpl_total_months">（共%d个月）</string>
</resources>